# NexusAnalytics

./: .cursorrules  .gitignore  .gitmodules  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO.md  DEPLOYMENT.md  LICENSE  README.md  README_REFACTORING.md  REFACTORING_GUIDE.md  REFACTORING_PROPOSAL.md  REFACTORING_SUMMARY.md  REFACTORING_TODO.md  config.yaml  demo-start.sh  docker-compose-demo.yaml  northwind.sql
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: README.md  ai-service-release-image.yaml  ai-service-release-nightly-image.yaml  ai-service-release-stable-image.yaml  ai-service-test.yaml  analytics-launcher-ci.yaml  bootstrap-release-image.yaml  pr-tagger.yaml  (+8 more)
analytics-ai-service/: .dockerignore  CONTRIBUTING.md  README.md  config.yaml  entrypoint.sh  pyproject.toml
analytics-ai-service/rust/: Cargo.toml  pyproject.toml
analytics-ai-service/rust/src/: lib.rs
analytics-launcher/: .golangci.yml  Makefile  go.mod  main.go
analytics-mdl/: mdl.schema.json
analytics-ui/: README.md  next.config.js  openapi.yaml  package.json
analytics-ui-v0/: pnpm-lock.yaml
analytics-ui-v2/: .eslintignore  .eslintrc.json  .prettierrc  ARCHITECTURE.md  BACKEND_CODE_LOCATION.md  TODO.md  codegen.yaml  components.json  jest.config.js  knexfile.js  next.config.js  next.config.mjs  openapi.yaml  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
docker/: README.md  config.example.yaml  docker-compose-dev.yaml  docker-compose.yaml
wren-ai-service/: Justfile  entrypoint.sh
(+420 files in other folders)
