[package]
name = "analytics-rust-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "analytics_rust_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["abi3-py38", "extension-module"] }
regex = "1.10"

# Optional crates reserved for future expansion
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# reqwest = { version = "0.11", features = ["json"] }
# tokio = { version = "1", features = ["full"] }
# sqlparser = "0.39"





